test/langtools/tools/javac/specialConstantFolding/IndyLinkageErrorTest.out
IndyLinkageErrorTest.java:28:63: compiler.err.reflective.error: of, java.lang.invoke.constant.DynamicCallSiteDesc, zero-length member name
IndyLinkageErrorTest.java:29:38: compiler.err.intrinsics.indy.must.have.constant.arg
2 errors
